feat: add initial setup header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,40 @@
     <link rel="stylesheet" href="./lib-bootstrap/bootstrap.min.css">
 </head>
 <body>
-    
+<!--TAMANHO IMGAEM CAROUSEL 1920X320-->
+    <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
+        <div class="container">
+            <h1 class="navbar-brand m-0 section title">Vitinho Cars</h1>
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
+                <ul class="nav nav-pills d-block d-md-flex">
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link"></a>
+                        <i class=" me-1"></i>
+                        Início
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link"></a>
+                        <i class=" me-1"></i>
+                        Comprar
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link"></a>
+                        <i class=" me-1"></i>
+                        Vender
+                    </li>
+                    <li class="nav-item fw-bold">
+                        <a href="#" class="nav-link"></a>
+                        <i class=" me-1"></i>
+                        Fale conosco
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+    </header>
     <script src="./lib-bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
