fix: fiz header style and config

--- a/index.html
+++ b/index.html
@@ -18,24 +18,28 @@
             <nav class="navbar-collapse collapse justify-content-end" id="menu-navegacao">
                 <ul class="nav nav-pills d-block d-md-flex">
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link"></a>
-                        <i class=" me-1"></i>
-                        Início
+                        <a href="#" class="nav-link">
+                            <i class=" me-1"></i>
+                            Inicio
+                        </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link"></a>
-                        <i class=" me-1"></i>
-                        Comprar
+                        <a href="#" class="nav-link">
+                            <i class=" me-1"></i>
+                            Comprar
+                        </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link"></a>
-                        <i class=" me-1"></i>
-                        Vender
+                        <a href="#" class="nav-link">
+                            <i class=" me-1"></i>
+                            Vender
+                        </a>
                     </li>
                     <li class="nav-item fw-bold">
-                        <a href="#" class="nav-link"></a>
-                        <i class=" me-1"></i>
-                        Fale conosco
+                        <a href="#" class="nav-link">
+                            <i class=" me-1"></i>
+                            Fale conosco
+                        </a>
                     </li>
                 </ul>
             </nav>
