feat: add carousel initial section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
                 </ul>
             </nav>
         </div>
-
     </header>
+
+    <div data-bs-spy="scroll" data-bs-target="#cabecalho" data-bs-smooth-scroll="true">
+        <section id="sobre-vitinho">
+            
+        </section>
+    </div>
     <script src="./lib-bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 </html>
